fixed annoying overlap of navbar and container headers

--- a/src/main/resources/static/assets/css/style.css
+++ b/src/main/resources/static/assets/css/style.css
@@ -2293,6 +2293,7 @@ pre code {
 
 .container:before,
 .container:after {
+  padding-top: 15px;
   content: " ";
   display: table;
 }
